Kubernetes/k8s-mesh/k8s/bff/config-map.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: bff-envoy-config
data:
  envoy.yaml: |-
    admin:
      access_log_path: /dev/stdout
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
    static_resources:
      listeners:
        - name: bff.listener
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8000
          traffic_direction: INBOUND
          filter_chains:
            - filters:
              - name: bff.listener.filter
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stat_prefix: bff.listener.filter.http
                  access_log:
                    - name: bff.filter.log.file
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                        path: /dev/stdout
                  route_config:
                    name: bff.listener.filter.route
                    virtual_hosts:
                      - name: bff.listener.route.service
                        domains:
                          - "*"
                        routes:
                          - match:
                              prefix: "/"
                            route:
                              cluster: bff.cluster
                            tracing:
                              custom_tags:
                                - tag: pod_name
                                  environment:
                                    name: CUSTOM_TRACE_PODNAME
                        response_headers_to_add:
                          - header:
                              key: "x-b3-traceid"
                              value: "%REQ(x-b3-traceid)%"
                  http_filters:
                    - name: envoy.filters.http.router
                      typed_config: {}
                  tracing:
                    provider:
                      name: web.listener.tracing.zipkin
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                        collector_cluster: zipkin.cluster
                        collector_endpoint: "/api/v2/spans"
                        collector_endpoint_version: HTTP_JSON
        - name: app.listener
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          traffic_direction: OUTBOUND
          filter_chains:
            - filters:
              - name: app.listener.filter
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stat_prefix: bff.listener.filter.http
                  access_log:
                    - name: bff.filter.log.file
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                        path: /dev/stdout
                  route_config:
                    name: app.listener.filter.route
                    virtual_hosts:
                      - name: bff.listener.route.service
                        domains:
                          - "*"
                        routes:
                          - match:
                              prefix: "/"
                            route:
                              cluster: app.cluster
                        response_headers_to_add:
                          - header:
                              key: "x-b3-traceid"
                              value: "%REQ(x-b3-traceid)%"
                  http_filters:
                    - name: envoy.filters.http.router
                      typed_config: {}
                  tracing:
                    provider:
                      name: web.listener.tracing.zipkin
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                        collector_cluster: zipkin.cluster
                        collector_endpoint: "/api/v2/spans"
                        collector_endpoint_version: HTTP_JSON
      clusters:
        - name: bff.cluster
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: bff.cluster
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 3000
        - name: app.cluster
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: zipkin.cluster
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: app1-service
                        port_value: 8000
                - endpoint:
                    address:
                      socket_address:
                        address: app2-service
                        port_value: 8000
        - name: zipkin.cluster
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: zipkin.cluster
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: tracing-service
                        port_value: 9411
